// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Internal|Question.civicIA fail to get civicIA analysis if not admin 1`] = `
Object {
  "question": Object {
    "responses": Object {
      "edges": Array [
        Object {
          "node": Object {
            "iaCategory": null,
            "iaReadability": null,
            "iaSentiment": null,
          },
        },
        Object {
          "node": Object {
            "iaCategory": null,
            "iaReadability": null,
            "iaSentiment": null,
          },
        },
        Object {
          "node": Object {
            "iaCategory": null,
            "iaReadability": null,
            "iaSentiment": null,
          },
        },
        Object {
          "node": Object {
            "iaCategory": null,
            "iaReadability": null,
            "iaSentiment": null,
          },
        },
        Object {
          "node": Object {
            "iaCategory": null,
            "iaReadability": null,
            "iaSentiment": null,
          },
        },
        Object {
          "node": Object {
            "iaCategory": null,
            "iaReadability": null,
            "iaSentiment": null,
          },
        },
        Object {
          "node": Object {
            "iaCategory": null,
            "iaReadability": null,
            "iaSentiment": null,
          },
        },
        Object {
          "node": Object {
            "iaCategory": null,
            "iaReadability": null,
            "iaSentiment": null,
          },
        },
        Object {
          "node": Object {
            "iaCategory": null,
            "iaReadability": null,
            "iaSentiment": null,
          },
        },
        Object {
          "node": Object {
            "iaCategory": null,
            "iaReadability": null,
            "iaSentiment": null,
          },
        },
        Object {
          "node": Object {
            "iaCategory": null,
            "iaReadability": null,
            "iaSentiment": null,
          },
        },
        Object {
          "node": Object {
            "iaCategory": null,
            "iaReadability": null,
            "iaSentiment": null,
          },
        },
        Object {
          "node": Object {
            "iaCategory": null,
            "iaReadability": null,
            "iaSentiment": null,
          },
        },
        Object {
          "node": Object {
            "iaCategory": null,
            "iaReadability": null,
            "iaSentiment": null,
          },
        },
        Object {
          "node": Object {
            "iaCategory": null,
            "iaReadability": null,
            "iaSentiment": null,
          },
        },
        Object {
          "node": Object {
            "iaCategory": null,
            "iaReadability": null,
            "iaSentiment": null,
          },
        },
        Object {
          "node": Object {
            "iaCategory": null,
            "iaReadability": null,
            "iaSentiment": null,
          },
        },
      ],
    },
  },
}
`;

exports[`Internal|Question.civicIA get civicIA analysis on responses 1`] = `
Object {
  "question": Object {
    "responses": Object {
      "edges": Array [
        Object {
          "node": Object {
            "iaCategory": null,
            "iaReadability": null,
            "iaSentiment": null,
          },
        },
        Object {
          "node": Object {
            "iaCategory": "sport",
            "iaReadability": 80,
            "iaSentiment": "NEUTRAL",
          },
        },
        Object {
          "node": Object {
            "iaCategory": null,
            "iaReadability": null,
            "iaSentiment": null,
          },
        },
        Object {
          "node": Object {
            "iaCategory": null,
            "iaReadability": null,
            "iaSentiment": null,
          },
        },
        Object {
          "node": Object {
            "iaCategory": null,
            "iaReadability": null,
            "iaSentiment": null,
          },
        },
        Object {
          "node": Object {
            "iaCategory": null,
            "iaReadability": null,
            "iaSentiment": null,
          },
        },
        Object {
          "node": Object {
            "iaCategory": null,
            "iaReadability": null,
            "iaSentiment": null,
          },
        },
        Object {
          "node": Object {
            "iaCategory": null,
            "iaReadability": null,
            "iaSentiment": null,
          },
        },
        Object {
          "node": Object {
            "iaCategory": "sport",
            "iaReadability": 37,
            "iaSentiment": "NEGATIVE",
          },
        },
        Object {
          "node": Object {
            "iaCategory": null,
            "iaReadability": null,
            "iaSentiment": null,
          },
        },
        Object {
          "node": Object {
            "iaCategory": null,
            "iaReadability": null,
            "iaSentiment": null,
          },
        },
        Object {
          "node": Object {
            "iaCategory": null,
            "iaReadability": null,
            "iaSentiment": null,
          },
        },
        Object {
          "node": Object {
            "iaCategory": null,
            "iaReadability": null,
            "iaSentiment": null,
          },
        },
        Object {
          "node": Object {
            "iaCategory": null,
            "iaReadability": null,
            "iaSentiment": null,
          },
        },
        Object {
          "node": Object {
            "iaCategory": null,
            "iaReadability": null,
            "iaSentiment": null,
          },
        },
        Object {
          "node": Object {
            "iaCategory": null,
            "iaReadability": null,
            "iaSentiment": null,
          },
        },
        Object {
          "node": Object {
            "iaCategory": null,
            "iaReadability": null,
            "iaSentiment": null,
          },
        },
      ],
    },
  },
}
`;
